package com.slax.reader

val htmlData = """
<div class="page" id="readability-page-1"><div id="js_content"><p></p><section><span leaf=""><img loading="lazy" style="width: 140px !important;" data-imgfileid="100025598" data-ratio="0.3037037037037037" data-s="300,640" data-src="https://mmbiz.qpic.cn/mmbiz_png/MqgA8Ylgeh4ek0GU1Snpd5xyiahZAUvz7OBtgIlbTu6EPpyEfG6V2kESjkXKK3fSHP6voC8hyCcn0RXhCkB2dicg/640?wx_fmt=png&amp;from=appmsg" data-type="png"
"""

val optimizedHtml = """
        <!DOCTYPE html>
        <html lang="zh-CN">
        <head>
...
